crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_column_search_additional_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(response)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "data": {
        "cp_catalog_number": 1
      },
      "dataset": "hybrid_column_search",
      "matches": {
        "cp_description": [
          "In general basic characters welcome. Clearly lively friends conv",
          "In general basic characters welcome. Clearly lively friends conv"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 1
      },
      "_score": "0.03"
    },
    {
      "data": {
        "cp_catalog_number": 1
      },
      "dataset": "hybrid_column_search",
      "matches": {
        "cp_description": [
          "Close customers might struggle away different memb"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 15
      },
      "_score": "0.01"
    }
  ]
}
