crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_column_search_where_error_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: e.to_string()
snapshot_kind: text
---
HTTP error: 500 Internal Server Error - Error occurred in search pipeline: Error occurred aggregating candidate search results: A database error occurred whilst aggregating search candidates: Schema error: Ambiguous reference to unqualified field cp_catalog_page_sk
