crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_column_sql_text_search_basic.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp
snapshot_kind: text
---
[
  {
    "cp_catalog_page_sk": 1,
    "trunc(text_search().score,Int64(2))": 2.708,
    "cp_description": "In general basic characters welcome. Clearly lively friends conv"
  }
]
