crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_column_sql_text_search_filters.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp
snapshot_kind: text
---
[
  {
    "cp_catalog_page_sk": 1,
    "score": 2.708303689956665,
    "cp_description": "In general basic characters welcome. Clearly lively friends conv"
  }
]
