crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_column_sql_vector_search_projection.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp
snapshot_kind: text
---
[
  {
    "cp_catalog_page_sk": 1,
    "score": 0.9474588746475064,
    "cp_description": "In general basic characters welcome. Clearly lively friends conv",
    "cp_catalog_number": 1
  },
  {
    "cp_catalog_page_sk": 15,
    "score": 0.940280433917256,
    "cp_description": "Close customers might struggle away different memb",
    "cp_catalog_number": 1
  },
  {
    "cp_catalog_page_sk": 3,
    "score": 0.937372876029606,
    "cp_description": "Earlier different differences get just to a methods; masses includ",
    "cp_catalog_number": 1
  },
  {
    "cp_catalog_page_sk": 7,
    "score": 0.9264550927529996,
    "cp_description": "Years must understand. Well fat thousands take. Good police l",
    "cp_catalog_number": 1
  }
]
