crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_multiple_column_keywords_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.78",
      "dataset": "qs",
      "matches": {
        "question": [
          "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
        ]
      },
      "primary_key": {
        "id": 361
      }
    },
    {
      "_score": "0.75",
      "dataset": "qs",
      "matches": {
        "question": [
          "There are 22 female students and 18 male students in a classroom. Find the total number \\( t \\) of students."
        ]
      },
      "primary_key": {
        "id": 787
      }
    },
    {
      "_score": "0.74",
      "dataset": "qs",
      "matches": {
        "question": [
          "How many numbers between 0 and 60 are even multiples of 5?"
        ]
      },
      "primary_key": {
        "id": 470
      }
    },
    {
      "_score": "0.73",
      "dataset": "qs",
      "matches": {
        "question": [
          "Find the number of groups of 7 in 21."
        ]
      },
      "primary_key": {
        "id": 359
      }
    }
  ]
}
